--- a/src/styles/CurrentRound.css
+++ b/src/styles/CurrentRound.css
@@ -3,6 +3,12 @@
 }
 
 .score {
+  margin: auto;
+  width: max-content;
+  padding: 10px 12px;
+
+  border-radius: 10px;
   font-size: 24px;
   text-align: center;
+  background-color: #242424dc;
 }
