--- a/src/styles/HeaderFooter.css
+++ b/src/styles/HeaderFooter.css
@@ -40,9 +40,9 @@ footer {
 .fa.fa-github {
   color: currentColor;
   font-size: 130%;
+  transition: transform 0.4s ease-in-out;
 
   &:hover {
-    transition: transform 0.4s ease-in-out;
-    transform: rotate(-360deg) scale(1.3);
+    transform: rotate(-360deg) scale(1.5);
   }
 }
