--- a/src/styles/modals.css
+++ b/src/styles/modals.css
@@ -13,7 +13,7 @@
   padding: var(--spacer);
   border: 2px solid white;
   border-radius: 10px;
-  background-color: #242424;
+  background-color: #242424dc;
 }
 
 .modal h1 {
